--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "psr-4": {
             "Donchev\\Log\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
